# AqualiteBot

./: README.md
MilkTea237/: .env.prod  SUPERUSER.pickle  TODO.txt  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  gamelist.pickle  jxy.txt  ncj_starter.py  pyproject.toml  run_relive.bat  test.py
MilkTea237/MilkTea237/data/images/: 033278.ldb  049449.ldb  049450.ldb  049451.ldb  049452.ldb  049453.ldb  049454.ldb  049455.ldb  049456.ldb  049457.ldb  CURRENT  CURRENT.bak  LOG  LOG.old  MANIFEST-047386
MilkTea237/MilkTea237/data/leveldb-v3/: 046433.ldb  046434.ldb  046435.ldb  046436.ldb  046437.ldb  046438.ldb  046439.ldb  046440.ldb  046441.ldb  046442.ldb  058788.ldb  058789.ldb  058790.ldb  058791.ldb  058792.ldb  058793.ldb  058794.ldb  058795.ldb  058796.ldb  058797.ldb  071374.ldb  071375.ldb  071376.ldb  071377.ldb  071378.ldb  071379.ldb  071380.ldb  071381.ldb  071382.ldb  071383.ldb  083862.ldb  083863.ldb  083864.ldb  083865.ldb  083866.ldb  083867.ldb  083868.ldb  083869.ldb  (+82 more)
MilkTea237/data/arcaea/: config.yml  user_data.db
MilkTea237/data/epicfree/: status.json
MilkTea237/data/mcstatus/: server_list.yml
MilkTea237/data/petpet/: meme_list.yml
MilkTea237/data/setu4/: setu_perm_cfg.json
MilkTea237/src/plugins/: AnimeTrace.py  DanceCube.py  HELP.py  JJRP.py  chadongfang.py  choujiang.py  dingshuchaxun_phi.py  dongfangsuijitu.py  e621sec.py  gptchatForBot.py  helpmechoice.py  longtu.py  maimai_unlocker.py  naichapaihangbang.py  ncrecver.py  osu_mapcatch.py  paika.py  piwo.py  poke.py  qiandao.py  qsignRunner.py  tool.py  valorant.py  wodenaicha.py
(+654 files in other folders)
