[project]
name = "MilkTea237"
version = "0.1.0"
description = "MilkTea237"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_imageutils","nonebot_plugin_osubot","nonebot_plugin_maimaidx","nonebot_plugin_analysis_bilibili"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
